Disable compton transitions

--- a/config/compton.conf
+++ b/config/compton.conf
@@ -123,18 +123,7 @@ blur-background-exclude = [
 #################################
 
 # Fade windows during opacity changes.
-fading = true;
-# The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 3;
-# Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.08;
-# Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.04;
-# Fade windows in/out when opening/closing
-# no-fading-openclose = true;
-
-# Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
+fading = false;
 
 #################################
 #
@@ -202,8 +191,6 @@ wintypes:
 {
     tooltip =
     {
-        # fade: Fade the particular type of windows.
-        fade = true;
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
