Update GTK window preferences

--- a/config/gtk-2.0/gtkfilechooser.ini
+++ b/config/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
 LocationMode=filename-entry
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=0
-GeometryY=0
+GeometryX=476
+GeometryY=1641
 GeometryWidth=840
 GeometryHeight=630
 SortColumn=name
