Disable pinch-to-zoom because it caused problems

--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -115,8 +115,8 @@ gesture swipe right	i3-msg workspace next
 ###############################################################################
 
 # GNOME SHELL open/close overview (works for GNOME on Xorg only)
-gesture pinch in	xdotool key ctrl+minus
-gesture pinch out	xdotool key ctrl+equal
+#gesture pinch in	xdotool key ctrl+minus
+#gesture pinch out	xdotool key ctrl+equal
 
 # KDE Plasma open/close overview
 # gesture pinch in	xdotool key ctrl+F9
