--- a/config/.gitignore
+++ b/config/.gitignore
@@ -1,17 +1,18 @@
-chromium/
-Caprine/
-discord/
-pulse/
-nemo/
-QtProject.conf
-Slack/
 autostart/
+Caprine/
+chromium/
 configstore/
 dconf/
 deluge/
+discord/
 easytag/
 filezilla/
 menus/
+nemo/
+nvim/plugged
+pulse/
+QtProject.conf
+Slack/
 spek/
 spotify/
 sqlitebrowser/
