Fix xautolock locker path and add notification before locking

--- a/config/i3/config
+++ b/config/i3/config
@@ -261,7 +261,7 @@ exec --no-startup-id "i3-msg 'workspace \"  1  \"'"
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "compton --config ~/.config/compton.conf -b"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
-exec --no-startup-id "xautolock -time 10 -locker ~/scripts/lock.sh"
+exec --no-startup-id "xautolock -time 10 -locker /home/saumon/scripts/i3lock.sh -notify 30 -notifier \"notify-send -u critical 'Locking soon' -- 'Screen will be locked in 30 seconds without action'\""
 exec --no-startup-id "blueman-applet"
 exec --no-startup-id "udiskie -c ~/.config/udiskie/config.yml"
 exec --no-startup-id "clipster -d"
