Ignore Atom, Code and inkscape config files

--- a/config/.gitignore
+++ b/config/.gitignore
@@ -1,12 +1,15 @@
+Atom/
 autostart/
 Caprine/
 chromium/
+Code - OSS/
 configstore/
 dconf/
 deluge/
 discord/
 easytag/
 filezilla/
+inkscape/
 menus/
 nemo/
 nvim/plugged
