Fix Discord file picker always being spawned on 3rd workspace

--- a/config/i3/config
+++ b/config/i3/config
@@ -245,7 +245,7 @@ bindsym $super+c exec "clipster -s"
 # ASSIGNMENTS
 
 assign [class="(?i)caprine"] $ws3
-assign [class="(?i)discord"] $ws3
+assign [class="(?i)discord" window_role="browser-window"] $ws3
 
 
 # STARTUP
