--- a/config/i3/config
+++ b/config/i3/config
@@ -20,7 +20,7 @@ set $ws7 "  7  "
 set $ws8 "  8  "
 set $ws9 "  9  "
 set $ws10 "  π  "
-set $terminal "alacritty"
+set $terminal "urxvtc"
 
 
 # FONT
@@ -260,6 +260,7 @@ exec_always --no-startup-id "setxkbmap -option caps:swapescape"
 exec --no-startup-id "i3-msg 'workspace \"  1  \"'"
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "compton --config ~/.config/compton.conf -b"
+exec --no-startup-id "urxvtd -q -o -f"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "xautolock -time 10 -locker /home/saumon/scripts/i3lock.sh -notify 30 -notifier \"notify-send -u critical 'Locking soon' -- 'Screen will be locked in 30 seconds without action'\""
 exec --no-startup-id "blueman-applet"
