--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,8 @@
+#
+# Saumon dotfiles
+# Dotbot configuration file
+#
+
 - defaults:
     link:
       relink: true
@@ -6,7 +11,9 @@
 
 - link:
     ~/.dotfiles: ''
-    ~/.config:
+    ~/.config/:
+      glob: true
+      path: config/*
     ~/.gtkrc-2.0:
       force: true
     ~/.icons/default/index.theme:
