Auto create ~/.config directory if not present in install script

--- a/install-headless.conf.yaml
+++ b/install-headless.conf.yaml
@@ -11,7 +11,9 @@
 
 - link:
     ~/.config/git:
+      create: true
     ~/.config/vim:
+      create: true
     ~/.npmrc:
     ~/.tmux.conf:
     ~/.zsh:
