Fix invalid config path for install-headless script

--- a/install-headless.conf.yaml
+++ b/install-headless.conf.yaml
@@ -12,8 +12,10 @@
 - link:
     ~/.config/git:
       create: true
+      path: config/git
     ~/.config/vim:
       create: true
+      path: config/vim
     ~/.npmrc:
     ~/.tmux.conf:
     ~/.zsh:
