--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -1,5 +1,6 @@
-# Read and parsed by systemd-localed. It's probably wise not to edit this file
-# manually too freely.
+# Written by systemd-localed(8), read by systemd-localed and Xorg. It's
+# probably wise not to edit this file manually. Use localectl(1) to
+# instruct systemd-localed to update it.
 Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
