Move vim directory to ~/.vim to prevent bugs

--- a/install-headless.conf.yaml
+++ b/install-headless.conf.yaml
@@ -18,6 +18,7 @@
       path: config/vim
     ~/.npmrc:
     ~/.tmux.conf:
+    ~/.vim:
     ~/.zsh:
     ~/.zshenv:
     ~/.zsh/.zlogin: ~/.zsh/zlogin
