--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
       path: icons/default/index.theme
     ~/.npmrc:
     ~/.tmux.conf:
+    ~/.vim:
     ~/.xinitrc:
     ~/.Xresources:
     ~/.zsh:
