--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -18,7 +18,7 @@ ncmpcpp_directory = ~/.config/ncmpcpp
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-lyrics_directory = ~/lyrics
+#lyrics_directory = ~/.lyrics
 #
 ##### connection settings #####
 #
