Fix and sync autorandr config

--- a/config/autorandr/mobile/config
+++ b/config/autorandr/mobile/config
@@ -1,3 +1,5 @@
+output DP-1
+off
 output HDMI-1
 off
 output DP-2
@@ -8,8 +10,4 @@ output eDP-1
 mode 1920x1080
 pos 0x0
 primary
-rate 60.00
-output DP-1
-mode 1920x1080
-pos 0x0
 rate 60.00
