Default cava color to magenta

--- a/config/cava/config
+++ b/config/cava/config
@@ -94,7 +94,7 @@
 
 # supported colors are: red, green, yellow, magenta, cyan, white, blue, black.
 ; background = black
-; foreground = cyan
+foreground = magenta
 
 
 [smoothing]
